# assistant-t800

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt
.github/workflows/: pytest.yml  ruff.yml
docs/: architecture.md  checklist-internal.md  checklist.md  commands-help.md  notes.md  overview.md
docs/dev/: commands.md  developer-guide.md  development-rules.md  localization.md  release-checklist.md  storage.md  suggestions.md  tui-integration.md
presentation/: index.html  presentation-notes.md
src/assistant_t800/: __init__.py  bootstrap.py  cli.py  config.py
src/assistant_t800/ai/: __init__.py  address_parser.py  agent.py  deps.py  display.py  history.py  phone_parser.py  results.py  tag_suggester.py  tools.py  utils.py
src/assistant_t800/application/: address_markers.py  commands.py  contacts_args.py  context.py  dispatcher.py  enums.py  errors.py  handlers.py  normalizers.py  phone_markers.py  results.py
src/assistant_t800/domain/: __init__.py  addresses.py  birthdays.py  contacts.py  country.py  fields.py  phone_ai.py  phone_validation.py  phones.py
src/assistant_t800/info_validator/: __init__.py  models.py  service.py  validators.py
src/assistant_t800/interfaces/: __init__.py  launcher.py
src/assistant_t800/localization/: __init__.py  messages.py  multilang.py
tests/: conftest.py
tests/ai/: conftest.py  test_agent_history.py  test_ai_tools.py  test_deps.py  test_display.py  test_history.py  test_results.py  test_tag_suggester.py  test_tools.py
tests/application/: test_address_args.py  test_address_markers.py  test_commands.py  test_contacts_args.py  test_context.py  test_dispatcher.py  test_enums.py  test_errors.py  test_handlers.py  test_handlers_error_payloads.py  test_normalizers.py  test_results.py
tests/domain/: test_addresses.py  test_birthdays.py  test_contacts.py  test_country.py  test_fields.py  test_phone_ai.py  test_phone_validation.py
tests/info_validator/: test_models.py  test_service.py  test_validators.py
tests/localization/: test_messages.py  test_multilang.py
tests/repositories/: test_contacts.py
tests/services/: test_address_parser.py  test_contacts.py  test_contacts_notes.py  test_phone_parser.py
tests/storage/: test_pickle.py
tests/suggestions/: test_ai.py  test_ai_models.py  test_fuzzy.py  test_models.py  test_registry.py  test_resolution.py  test_service.py
(+69 files in other folders)
