[project]
name = "assistant-t800"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eugenzor", email = "3356454+eugenzor@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=0.80",
    "pydantic-ai>=0.0.13",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
assistant-t800 = "assistant_t800:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
