[project]
name = "assistant-t800"
version = "1.0.0"
description = "CLI and AI-powered personal assistant for contact management."
readme = "README.md"
authors = [
    { name = "eugenzor", email = "3356454+eugenzor@users.noreply.github.com" },
    { name = "gorvic", email = "40595597+gorvic@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "textual>=0.80",
    "pydantic-ai>=1.102.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "google-genai>=2.6.0",
    "prompt-toolkit>=3.0.52",
    "rapidfuzz>=3.0",
]

[project.scripts]
assistant-t800 = "assistant_t800:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
personal_assistant = [
    "py.typed",
    "localizationlocales/*.ini",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.15",
]
